# presentation-mode

./: README.md  de.flump.presentation-mode.json  meson.build  meson_post_install.py
data/: de.flump.presentation-mode.desktop  de.flump.presentation-mode.gresources.xml  meson.build  window.ui
src/: main.c  meson.build  pm-save-restore.c  pm-save-restore.h  presentationmodeapp.c  presentationmodeapp.h  presentationmodeappwin.c  presentationmodeappwin.h
